Added the pre-made assets for the website interface.

--- a/resources/assets/less/app.less
+++ b/resources/assets/less/app.less
@@ -1,1 +1,12 @@
+// Vendor
+@import "bootstrap";
+@import "source-sans-pro";
+
+// Configuration
+@import "variables";
+
+// Components
+@import "website";
+@import "blog";
+@import "admin";
 
