Fixed top margin for flash messages.

--- a/resources/assets/less/website.less
+++ b/resources/assets/less/website.less
@@ -17,6 +17,8 @@ body > .container {
 
 .inline { display: inline; }
 
+.flash { margin-top: 20px; }
+
 .website-footer {
   background: @gray-lighter;
   width: 100%;
