--- a/resources/assets/less/variables.less
+++ b/resources/assets/less/variables.less
@@ -4,5 +4,6 @@
 
 /* Type */
 
+@font-size-base: 16px;
 @font-family-sans-serif: "Source Sans Pro", "Helvetica Neue", Helvetica, Arial, sans-serif;
 @text-color: @gray;
