More style-related tweaks.

--- a/resources/assets/less/admin.less
+++ b/resources/assets/less/admin.less
@@ -33,5 +33,10 @@
       &.active > a { color: @gray; }
     }
   }
+
+  @media(max-width: @screen-xs-max) {
+    text-align: right;
+    height: 80px;
+  }
 }
 
