More style-related tweaks.

--- a/resources/assets/less/admin.less
+++ b/resources/assets/less/admin.less
@@ -1,7 +1,17 @@
+.admin-list,
+.admin-list .glyphicon,
+.admin-list .btn-sm {
+  font-size: 14px;
+}
+
 .admin-nav {
   background: #eee;
   line-height: 40px;
   height: 40px;
+
+  &, .dropdown-menu {
+    font-size: 16px;
+  }
 
   a {
     color: @gray-light;
