--- a/resources/assets/less/variables.less
+++ b/resources/assets/less/variables.less
@@ -4,6 +4,13 @@
 
 /* Type */
 
-@font-size-base: 16px;
+@font-size-base: 18px;
+@font-size-h1: 42px;
+@font-size-h2: 34px;
+@font-size-h3: 28px;
+@font-size-h4: 20px;
+@font-size-h5: 18px;
+@font-size-h6: 16px;
+
 @font-family-sans-serif: "Source Sans Pro", "Helvetica Neue", Helvetica, Arial, sans-serif;
 @text-color: @gray;
