--- a/resources/assets/less/website.less
+++ b/resources/assets/less/website.less
@@ -15,11 +15,16 @@ body > .container {
   //margin-top: 20px;
 }
 
+hr {
+  margin: 15px 0;
+}
+
 .inline { display: inline; }
 
 .flash { margin-top: 20px; }
 
 .website-footer {
+  font-size: 14px;
   background: @gray-lighter;
   width: 100%;
   height: @footer-height;
@@ -31,14 +36,16 @@ body > .container {
   }
 
   @media(max-width: @screen-xs-max) {
-    height: @footer-height * 2;
     text-align: center;
+    height: @footer-height * 2;
 
     .text-right { text-align: center; }
   }
 }
 
 .website-nav {
+  font-size: 16px;
+
   .logo {
     width: 100%;
     margin-bottom: 15px;
