--- a/resources/assets/less/website.less
+++ b/resources/assets/less/website.less
@@ -21,8 +21,12 @@ hr {
 }
 
 .inline { display: inline; }
-
 .flash { margin-top: 20px; }
+.fake-hidden {
+  position: absolute !important;
+  top: -99999px !important;
+  left: -99999px !important;
+}
 
 .website-footer {
   font-size: 14px;
